--- a/LeetCode/641-650/645. 错误的集合（简单）.md
+++ b/LeetCode/641-650/645. 错误的集合（简单）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[645. 错误的集合]()** ，难度为 **简单**。
+这是 LeetCode 上的 **[645. 错误的集合](https://leetcode-cn.com/problems/set-mismatch/solution/gong-shui-san-xie-yi-ti-san-jie-ji-shu-s-vnr9/)** ，难度为 **简单**。
 
 Tag : 「模拟」、「哈希表」、「数学」、「桶排序」
 
