--- a/LeetCode/541-550/541. 反转字符串 II（简单）.md
+++ b/LeetCode/541-550/541. 反转字符串 II（简单）.md
@@ -41,9 +41,9 @@ class Solution {
     public String reverseStr(String s, int k) {
         char[] cs = s.toCharArray();
         int n = s.length();
-        for (int l = 0, r = l + k - 1; l < n; r = l + k - 1) {
+        for (int l = 0; l < n; l = l + 2 * k) {
+            int r = l + k - 1;
             reverse(cs, l, Math.min(r, n - 1));
-            l = l + 2 * k;
         }
         return String.valueOf(cs);
     }
