--- a/LeetCode/1641-1650/1646. 获取生成数组中的最大值（简单）.md
+++ b/LeetCode/1641-1650/1646. 获取生成数组中的最大值（简单）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[1646. 获取生成数组中的最大值](https://leetcode-cn.com/problems/get-maximum-in-generated-array/solution/gong-shui-san-xie-jian-dan-mo-ni-ti-by-a-sj53/)** ，难度为 **中等**。
 
-Tag : 「模拟」
+Tag : 「模拟」、「打表」
 
 
 
@@ -77,6 +77,39 @@ class Solution {
 }
 ```
 * 时间复杂度：$O(n)$
+* 空间复杂度：$O(n)$
+
+---
+
+### 打表 
+
+利用数据范围，可以直接使用 `static` 进行打表构造。
+
+代码：
+```Java
+class Solution {
+    static int N = 110;
+    static int[] nums = new int[N];
+    static int[] ans = new int[N];
+    static {
+        nums[0] = 0;
+        nums[1] = 1;
+        for (int i = 0; i < N; i++) {
+            if (2 * i < N) nums[2 * i] = nums[i];
+            if (2 * i + 1 < N) nums[2 * i + 1] = nums[i] + nums[i + 1];
+        }
+        int max = 0;
+        for (int i = 0; i < N; i++) {
+            max = Math.max(max, nums[i]);
+            ans[i] = max;
+        }
+    }
+    public int getMaximumGenerated(int n) {
+        return ans[n];       
+    }
+}
+```
+* 时间复杂度：将打表逻辑放到本地进行，复杂度为 $O(1)$
 * 空间复杂度：$O(n)$
 
 ---
