--- a/LeetCode/1641-1650/1646. 获取生成数组中的最大值（简单）.md
+++ b/LeetCode/1641-1650/1646. 获取生成数组中的最大值（简单）.md
@@ -90,7 +90,6 @@ class Solution {
 class Solution {
     static int N = 110;
     static int[] nums = new int[N];
-    static int[] ans = new int[N];
     static {
         nums[0] = 0;
         nums[1] = 1;
@@ -98,14 +97,12 @@ class Solution {
             if (2 * i < N) nums[2 * i] = nums[i];
             if (2 * i + 1 < N) nums[2 * i + 1] = nums[i] + nums[i + 1];
         }
-        int max = 0;
-        for (int i = 0; i < N; i++) {
-            max = Math.max(max, nums[i]);
-            ans[i] = max;
+        for (int i = 0, max = 0; i < N; i++) {
+            nums[i] = max = Math.max(max, nums[i]);
         }
     }
     public int getMaximumGenerated(int n) {
-        return ans[n];       
+        return nums[n];       
     }
 }
 ```
