--- a/LeetCode/881-890/881. 救生艇（中等）.md
+++ b/LeetCode/881-890/881. 救生艇（中等）.md
@@ -66,19 +66,19 @@ Tag : 「贪心」、「双指针」
 
 * 假设其与 $people[l]$（此时 $l$ 为原始左边界 $0$）之和超过 $limit$，说明 $people[r]$ 与数组任一成员组合都会超过 $limit$，即无论在最优组合还是贪心组合中，$people[r]$ 都会独立成船；
 * 假设 $people[r] + people[l] <= limit$，说明数组中存在至少一个成员能够与 $people[l]$ 成船：
-    
+  
     * 假设在最优组合中 $people[l]$ 独立成船，此时如果将贪心组合 $(people[l], people[r])$ 中的 $people[l]$ 拆分出来独立成船，贪心二元组数量 $c2$ 必然不会变大（可能还会变差），即将「贪心解」调整成「最优解」结果不会变好；
     
     * 假设在最优组合中，$people[l]$ 不是独立成船，又因此当前 $r$ 处于原始右边界，因此与 $people[l]$ 成组的成员 $people[x]$ 必然满足 $people[x] <= people[r]$。
-    此时我们将 $people[x]$ 和 $people[r]$ 位置进行交换（将贪心组合调整成最优组合），此时带来的影响包括：
+      此时我们将 $people[x]$ 和 $people[r]$ 位置进行交换（将贪心组合调整成最优组合），此时带来的影响包括：
         * 与 $people[l]$ 成组的对象从 $people[r]$ 变为 $people[x]$，但因为 $people[x] <= people[r]$，即有 $people[l] + people[x] <= people[l] + people[r] <= limit$，仍为合法二元组，消耗船的数量为 $1$；
         * 原本位置 $x$ 的值从 $people[x]$ 变大为 $people[r]$，如果调整后的值能组成二元组，那么原本更小的值也能组成二元组，结果没有变化；如果调整后不能成为组成二元组，那么结果可能会因此变差。
-        
+      
         综上，将 $people[x]$ 和 $people[r]$ 位置进行交换（将贪心组合调整成最优组合），贪心二元组数量 $c2$ 不会变大，即将「贪心解」调整成「最优解」结果不会变好。
 
 **对于边界情况，我们证明了从「贪心解」调整为「最优解」不会使得结果更好，因此可以保留当前的贪心决策，然后将问题规模缩减为 $n - 1$ 或者 $n - 2$，同时数列仍然满足升序特性，即归纳分析所依赖的结构没有发生改变，可以将上述的推理分析推广到每一个决策的回合（新边界）中。**
 
-**至此，我们证明了「贪心组合所得的总船数」不会比「最优组合所得总船数」更多，即贪心解是最优解之一。**
+**至此，我们证明了将「贪心解」调整为「最优解」结果不会变好，即贪心解是最优解之一。**
 
 代码：
 ```Java
