--- a/LeetCode/291-300/295. 数据流的中位数（困难）.md
+++ b/LeetCode/291-300/295. 数据流的中位数（困难）.md
@@ -53,7 +53,7 @@ findMedian() -> 2
 * 插入前两者大小不同，说明前数据流元素个数为奇数，插入后变为偶数。我们期望操作完达到「`l` 和 `r` 数量相等，同时双堆维持有序」，进一步分情况讨论（此时 `l` 必然比 `r` 元素多一）：
     * 如果 `num >= l.peek()`，说明 `num` 的插入位置不会在前半部分（不会在 `l` 中），直接添加到 `r` 即可。
     * 如果 `num < l.peek()`，说明 `num` 的插入位置在前半部分，此时将 `l` 的堆顶元素放到 `r` 中，再把 `num` 放入 `l` 中（相等于从 `l` 中替换一位出来当到 `r` 中）。
-     
+    
 
 代码：
 ```Java
@@ -83,7 +83,7 @@ class MedianFinder {
     public double findMedian() {
         int s1 = l.size(), s2 = r.size();
         if (s1 == s2) {
-            return (l.peek() + r.peek()) * 1.0 / 2;
+            return (l.peek() + r.peek()) / 2.0;
         } else {
             return l.peek();
         }
@@ -134,8 +134,8 @@ class MedianFinder {
     
     public double findMedian() {
         int size = a + b + c;
-        if (size % 2 == 0) return (find(size / 2) + find(size / 2 + 1)) * 1.0 / 2;
-        return find(size / 2 + 1) * 1.0;
+        if (size % 2 == 0) return (find(size / 2) + find(size / 2 + 1)) / 2.0;
+        return find(size / 2 + 1);
     }
 
     int find(int n) {
