--- a/LeetCode/1471-1480/1473. 粉刷房子 III（困难）.md
+++ b/LeetCode/1471-1480/1473. 粉刷房子 III（困难）.md
@@ -1,8 +1,8 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[1473. 粉刷房子 III]()** ，难度为 **困难**。
+这是 LeetCode 上的 **[1473. 粉刷房子 III](https://leetcode-cn.com/problems/paint-house-iii/solution/gong-shui-san-xie-san-wei-dong-tai-gui-h-ud7m/)** ，难度为 **困难**。
 
-Tag : 「」
+Tag : 「动态规划」、「序列 DP」
 
 
 
