--- a/LeetCode/1581-1590/1588. 所有奇数长度子数组的和（简单）.md
+++ b/LeetCode/1581-1590/1588. 所有奇数长度子数组的和（简单）.md
@@ -84,18 +84,18 @@ class Solution {
 
 ### 数学
 
-事实上，我们可以统计任意只 $arr[i]$ 在奇数子数组的出现次数。
+事实上，我们可以统计任意值 $arr[i]$ 在奇数子数组的出现次数。
 
 对于原数组的任意位置 $i$ 而言，其左边共有 $i$ 个数，右边共有 $n - i - 1$ 个数。
 
 **$arr[i]$ 作为某个奇数子数组的成员的充要条件为：其所在奇数子数组左右两边元素个数奇偶性相同。**
 
-于是问题转换为如何求得「$arr[i]$ 在原数组中左边连续一段元素个为奇数的方案数」和「$arr[i]$ 在原数组右边连续一段元素个数为偶数的方案数」。
+于是问题转换为如何求得「$arr[i]$ 在原数组中两边连续一段元素个为奇数的方案数」和「$arr[i]$ 在原数组两边连续一段元素个数为偶数的方案数」。
 
 由于我们已经知道 $arr[i]$ 左边共有 $i$ 个数，右边共有 $n - i - 1$ 个数，因此可以算得组合数：
 
 * 位置 $i$ 左边奇数个数的方案数为 $(i + 1) / 2$，右边奇数个数的方案数为 $(n - i) / 2$；
-* 位置 $i$ 右边偶数（非零）个数的方案数为 $i / 2$，右边偶数（非零）个数的方案数为 $(n - i - 1) / 2$；
+* 位置 $i$ 左边偶数（非零）个数的方案数为 $i / 2$，右边偶数（非零）个数的方案数为 $(n - i - 1) / 2$；
     * 考虑左右两边不选也属于合法的偶数个数方案数，因此在上述分析基础上对偶数方案数自增 $1$。
 
 至此，我们得到了位置 $i$ 左右奇数和偶数的方案数个数，根据「如果 $arr[i]$ 位于奇数子数组中，其左右两边元素个数奇偶性相同」以及「乘法原理」，我们知道 $arr[i]$ 同出现在多少个奇数子数组中，再乘上 $arr[i]$ 即是 $arr[i]$ 对答案的贡献。
