--- a/LeetCode/1101-1110/1109. 航班预订统计（中等）.md
+++ b/LeetCode/1101-1110/1109. 航班预订统计（中等）.md
@@ -101,7 +101,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：预处理差分数组的复杂度为 $O(n)$；构造答案复杂度为 $O(n)$。整体复杂度为 $O(n)$
+* 时间复杂度：令 `bs` 长度为 $m$，预处理差分数组的复杂度为 $O(m)$；构造答案复杂度为 $O(n)$。整体复杂度为 $O(m + n)$
 * 空间复杂度：$O(n)$
 
 ---
