--- a/LeetCode/701-710/704. 二分查找（简单）.md
+++ b/LeetCode/701-710/704. 二分查找（简单）.md
@@ -2,6 +2,8 @@
 
 这是 LeetCode 上的 **[704. 二分查找](https://leetcode-cn.com/problems/binary-search/solution/gong-shui-san-xie-yun-yong-er-fen-zhao-f-5jyj/)** ，难度为 **简单**。
 
+
+
 Tag : 「二分」
 
 给定一个 n 个元素有序的（升序）整型数组 nums 和一个目标值 target  ，写一个函数搜索 nums 中的 target，如果目标值存在返回下标，否则返回 -1。
@@ -37,9 +39,9 @@ Tag : 「二分」
 
 一道二分裸题，写二分重点在于学会从「二段性」出发进行分析，想清楚二分的是哪个端点/边界。
 
-而不是局限于用什么模板，大于还是小于，硬记这些会理解二分不会有任何帮助。
+而不是局限于用什么模板，大于还是小于，硬记这些对理解二分不会有任何帮助。
 
-事实上，当搞清楚二分的内容之后，何种形式写法都能写出。
+事实上，当搞清楚二分的是什么内容之后，何种形式写法都能写出。
 
 代码：
 
