--- a/LeetCode/501-510/502. IPO（困难）.md
+++ b/LeetCode/501-510/502. IPO（困难）.md
@@ -1,8 +1,10 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[502. IPO](https://leetcode-cn.com/problems/next-greater-element-ii/solution/cong-po-su-jie-fa-de-jiao-du-qu-li-jie-d-trht/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[502. IPO](https://leetcode-cn.com/problems/next-greater-element-ii/solution/cong-po-su-jie-fa-de-jiao-du-qu-li-jie-d-trht/)** ，难度为 **困难**。
 
 Tag : 「贪心」、「优先队列」、「堆」
+
+
 
 假设 力扣（LeetCode）即将开始 IPO 。
 
