--- a/LeetCode/671-680/678. 有效的括号字符串（中等）.md
+++ b/LeetCode/671-680/678. 有效的括号字符串（中等）.md
@@ -40,7 +40,7 @@ Tag : 「有效括号问题」、「动态规划」、「模拟」
 
 ### 动态规划
 
-**定义 $f[i][j]$ 为考虑前 $i$ 个字符（字符下标从 $1$ 开始），能否与 $j$ 个左括号形成合法括号序列。**
+**定义 $f[i][j]$ 为考虑前 $i$ 个字符（字符下标从 $1$ 开始），能否与 $j$ 个右括号形成合法括号序列。**
 
 起始时只有 $f[0][0]$ 为 $true$，最终答案为 $f[n][0]$。
 
