--- a/LeetCode/211-220/212. 单词搜索 II（困难）.md
+++ b/LeetCode/211-220/212. 单词搜索 II（困难）.md
@@ -89,8 +89,7 @@ class Solution {
 }
 ```
 * 时间复杂度：共有 $m * n$ 个起点，每次能往 $4$ 个方向搜索（不考虑重复搜索问题），且搜索的长度不会超过 $10$。整体复杂度为 $O(m * n * 4^{10})$
-* 空间复杂度：$O(m * n * 4^{10})$
-
+* 空间复杂度：$O(\sum_{i=0}^{words.length - 1} words[i].length)$
 
 ---
 
@@ -167,7 +166,7 @@ class Solution {
 }
 ```
 * 时间复杂度：共有 $m * n$ 个起点，每次能往 $4$ 个方向搜索（不考虑重复搜索问题），且搜索的长度不会超过 $10$。整体复杂度为 $O(m * n * 4^{10})$
-* 空间复杂度：$O(m * n * 4^{10})$
+* 空间复杂度：$O(\sum_{i=0}^{words.length - 1} words[i].length * C)$，$C$ 为字符集大小，固定为 $26$
 
 ---
 
