--- a/LeetCode/671-680/673. 最长递增子序列的个数（中等）.md
+++ b/LeetCode/671-680/673. 最长递增子序列的个数（中等）.md
@@ -99,7 +99,7 @@ class Solution {
 我们可以使用「树状数组」维护二元组 $(len, cnt)$ 信息：
 
 1. 因为数据范围较大（$-10^6 <= nums[i] <= 10^6$），但数的个数为 $2000$，因此第一步先对 $nums$ 进行离散化操作；
-2. 在遍历 $nums$ 时，每次从树状数组中查询值严格小于 $nums[i]$ 离散值（利用 $nums[i]$ 离散化后的值仍为正整数，我们可以直接查询小于等于 $nums[i]$ 离散值 $-1$ 的值）的最小长度，及最小长度对应的数量；
+2. 在遍历 $nums$ 时，每次从树状数组中查询值严格小于 $nums[i]$ 离散值（利用 $nums[i]$ 离散化后的值仍为正整数，我们可以直接查询小于等于 $nums[i]$ 离散值 $-1$ 的值）的最大长度，及最大长度对应的数量；
 3. 对于流程 $2$ 中查得的 $(len, cnt)$，由于 $nums[i]$ 可以接在其后，因此首先长度加一，同时数量将 $cnt$ 累加到该离散值中。
 
 代码：
