--- a/LeetCode/321-330/326. 3的幂（简单）.md
+++ b/LeetCode/321-330/326. 3的幂（简单）.md
@@ -103,7 +103,7 @@ class Solution {
 }
 ```
 * 时间复杂度：将打表逻辑交给 $OJ$ 执行的话，复杂度为 $O(\log_3{C})$，$C$ 固定为 $2147483647$；将打表逻辑放到本地执行，复杂度为 $O(1)$
-* 空间复杂度：$O(n)$
+* 空间复杂度：$O(\log{n})$
 
 ---
 
