--- a/LeetCode/321-330/326. 3的幂（简单）.md
+++ b/LeetCode/321-330/326. 3的幂（简单）.md
@@ -34,7 +34,7 @@ Tag : 「数学」、「打表」
 ```
 
 提示：
-* -231 <= n <= 231 - 1
+* -$2^{31}$ <= n <= $2^{31}$ - 1
 
 ---
 
@@ -64,6 +64,8 @@ class Solution {
 如果 $n$ 为 $3$ 的幂的话，那么必然满足 $n * 3^k = 1162261467$，即 $n$ 与 $1162261467$ 存在倍数关系。
 
 因此，我们只需要判断 $n$ 是否为 $1162261467$ 的约数即可。
+
+> 注意：这并不是快速判断 $x$ 的幂的通用做法，当且仅当 $x$ 为质数可用。
 
 代码：
 ```Java
@@ -103,7 +105,7 @@ class Solution {
 }
 ```
 * 时间复杂度：将打表逻辑交给 $OJ$ 执行的话，复杂度为 $O(\log_3{C})$，$C$ 固定为 $2147483647$；将打表逻辑放到本地执行，复杂度为 $O(1)$
-* 空间复杂度：$O(\log{n})$
+* 空间复杂度：$O(\log_3{n})$
 
 ---
 
