--- a/LeetCode/351-360/352. 将数据流变为多个不相交区间（困难）.md
+++ b/LeetCode/351-360/352. 将数据流变为多个不相交区间（困难）.md
@@ -219,6 +219,14 @@ class SummaryRanges {
 
 ---
 
+### 进阶
+
+如果存在大量合并，并且与数据流的大小相比，不相交区间的数量很小，该怎么办?
+
+即需要确保 `addNum` 的复杂度，而对 `getIntervals` 复杂度要求不高，上述解法就已经是这么做的了。
+
+---
+
 ### 最后
 
 这是我们「刷穿 LeetCode」系列文章的第 `No.352` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
